<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.saisreenivas.inputcontrols.myseekbar.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/title"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:id="@+id/title"
            android:textColor="@color/titleColor" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@id/title"
                android:id="@+id/seekBarRed1"
                android:padding="5dp"
                android:weightSum="10"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="Red"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_alignParentLeft="true"
                android:id="@+id/redText"
                android:layout_below="@id/title"/>
            <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/redText"
                    android:max="255"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/seekBarRed" />
            <TextView
                    android:layout_width="23dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewRed"
                    android:text="255"
                    android:textSize="20sp"
                    android:paddingLeft="5dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_toRightOf="@id/seekBarRed"
                    android:layout_below="@id/redText"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/seekBarGreen1"
            android:padding="5dp"
            android:weightSum="10"
            android:layout_below="@id/seekBarRed1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="Green"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_alignParentLeft="true"
                android:id="@+id/greenText"
                android:layout_below="@id/seekBarRed1"/>
            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:max="255"
                android:layout_weight="9"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:id="@+id/seekBarGreen" />
            <TextView
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewGreen"
                android:text="255"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#000"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/seekBarGreen"
                android:layout_below="@id/greenText"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/seekBarBlue1"
            android:padding="5dp"
            android:weightSum="10"
            android:layout_below="@id/seekBarGreen1"
            android:layout_height="wrap_content">
            <TextView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="Blue"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_alignParentLeft="true"
                android:id="@+id/blueText"
                android:layout_below="@id/seekBarGreen1"/>
            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/blueText"
                android:layout_alignParentLeft="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:max="255"
                android:layout_weight="9"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/seekBarBlue" />
            <TextView
                android:layout_width="23dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/textViewBlue"
                android:text="255"
                android:paddingLeft="5dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/seekBarBlue"
                android:layout_below="@id/blueText"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBarBlue1"
            android:id="@+id/hexaText"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20dp"
            android:text="@string/hexa_text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/hexaText"
            android:id="@+id/hexaTot"
            android:weightSum="5"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/hexaValue"
                android:text="#00gg0000"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textIsSelectable="true"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:textAppearanceLarge"/>
            <LinearLayout
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_below="@id/hexaValue"
                android:id="@+id/imageMe"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_gravity="top"
                android:gravity="center"
                android:background="#fff">
                <ImageView
                    android:layout_width="match_parent"
                    android:background="@color/basic"
                    android:layout_gravity="left"
                    android:id="@+id/outputColor"
                    android:layout_height="60dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/allBtn"
            android:weightSum="3"
            android:layout_below="@id/hexaTot"
            android:layout_alignParentRight="true"
            android:layout_marginRight="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="13dp"
            android:layout_alignParentEnd="true">
            <Button
                android:text="@string/default_btn"
                android:paddingTop="8dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/defaultBtn" />
            <Button
                android:layout_weight="1"
                android:text="@string/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveBtn" />
            <Button
                android:layout_weight="1"
                android:text="@string/background_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setBackground" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@id/allBtn">
            <GridView
                android:padding="4dp"
                android:background="@drawable/black_border"
                android:fadeScrollbars="false"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:id="@+id/gridview"
                android:columnWidth="45dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp"
                android:horizontalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center"
                android:layout_marginRight="13dp"
                android:nestedScrollingEnabled="true"
                android:layout_marginLeft="13dp"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
